[package]
name = "keylogger_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
windows-sys = { version = "0.59.0", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse"
]}
clap = { version = "4.5.39", features = ["derive"] }
shlex = { version = "1.3.0" }
log = "0.4.27"
once_cell = "1.21.3"